# regime-detection-comparison

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
.mypy_cache/3.13/: __future__.data.json  __future__.meta.json  __main__.data.json  __main__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _locale.data.json  _locale.meta.json  _lsprof.data.json  _lsprof.meta.json  _operator.data.json  _operator.meta.json  (+228 more)
.mypy_cache/3.13/PIL/: ExifTags.data.json  ExifTags.meta.json  GimpGradientFile.data.json  GimpGradientFile.meta.json  GimpPaletteFile.data.json  GimpPaletteFile.meta.json  ImageMode.data.json  ImageMode.meta.json  PaletteFile.data.json  PaletteFile.meta.json  TiffTags.data.json  TiffTags.meta.json  __init__.data.json  __init__.meta.json  _binary.data.json  _binary.meta.json  (+8 more)
notebooks/: comparison.ipynb  comparison.md  comparison.py  comparison_synthetic.ipynb  comparison_synthetic.md  comparison_synthetic.py
(+821 files in other folders)
