[project]
name = "regime-detection-comparison"
version = "0.1.0"
description = "Comparing MMD and BOCPD approaches to financial regime detection"
authors = [{ name = "Elijah Whitham-Powell" }]
license = { text = "MIT" }
requires-python = ">=3.10"
readme = "README.md"

dependencies = [
    "finfeatures[yfinance] @ git+https://github.com/whitham-powell/finfeatures",
    "regime-detection @ git+https://github.com/whitham-powell/mmd-regime-detection",
    "bocpd @ git+https://github.com/whitham-powell/bocpd-regime-detection",
    "matplotlib",
    "scikit-learn",
    "numpy",
    "pandas",
    "jupytext",
    "nbconvert",
    "ipykernel",
]

[project.optional-dependencies]
dev = ["pre-commit", "black", "isort"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
